[gd_scene load_steps=5 format=3 uid="uid://b6boxed5w0ujx"]

[ext_resource type="Theme" uid="uid://cql86uwxm36wp" path="res://contents/main_earlymenu/theme.tres" id="1_kq37u"]
[ext_resource type="Script" uid="uid://ubiqiglpve8g" path="res://contents/main_earlymenu/main_earlymenu.gd" id="2_tekc0"]
[ext_resource type="Texture2D" uid="uid://beu0pefh5ovbs" path="res://contents/main_earlymenu/welcome_picture_0.jpg" id="3_x8ole"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tekc0"]
bg_color = Color(0, 0, 0, 0.12549)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Main_EarlyMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource("1_kq37u")
script = ExtResource("2_tekc0")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_kq37u")
tab_alignment = 1
current_tab = 0
tab_focus_mode = 0

[node name="Welcome" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/separation = 0
metadata/_tab_index = 0

[node name="TextureRect" type="TextureRect" parent="TabContainer/Welcome"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_x8ole")
stretch_mode = 6

[node name="ContinueButton" type="Button" parent="TabContainer/Welcome"]
layout_mode = 2
text = "继续"

[node name="EULA" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/EULA"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/EULA/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_kq37u")
bbcode_enabled = true
text = "[center]百川HUB(早期实验版)使用协议[/center]

以下将百川HUB(早期实验版)称为\"本程序\"。
请在继续使用本程序前仔细阅读本协议，请您在已完全同意本协议后再点击\"我已阅读并同意该协议\"按钮。若您不同意本协议，请勿使用本程序。

一，开源协议
本程序源代码按照GPL-3.0(GNU General Public License v3.0)协议开源，本协议在其基础上补充对本程序发行版的权利与责任划定，本协议未提到的部分继续遵循GPL-3.0。
源码仓库URL：https://github.com/bocai-bca/BaiChuanHUB

二，免责声明
本程序属于仍需经历测试检验的早期实验版，开发方尚不能保证其能正常无误地运行，且鉴于其的开源性质和其遵循的开源协议，本协议在此声明：对于您因运行本程序而获得的任何损失，如数据错误、数据丢失、硬件损坏等，无论损失的造成原因是本程序按开发方的设计正常运行，还是以超出了开发方预期的方式运行(即发生意外的错误)，开发方都无需承担任何责任、无需对您进行任何赔偿。
同意本协议意味着您同意/接受该免责声明，即每次使用本程序都需要您同意一次该免责声明，您的每次同意可仅对该次使用生效。"

[node name="AgreeButtonBar" type="HBoxContainer" parent="TabContainer/EULA"]
layout_mode = 2

[node name="RejectButton" type="Button" parent="TabContainer/EULA/AgreeButtonBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "不同意该协议并退出"

[node name="AgreeButton" type="Button" parent="TabContainer/EULA/AgreeButtonBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "我已阅读并同意该协议"

[node name="Installer" type="ScrollContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Installer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Installer/MarginContainer"]
layout_mode = 2

[node name="GameLocation" type="HBoxContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextGameLocation" type="Label" parent="TabContainer/Installer/MarginContainer/VBoxContainer/GameLocation"]
layout_mode = 2
text = "游戏可执行文件位置"
vertical_alignment = 1

[node name="LineEditGameLocation" type="LineEdit" parent="TabContainer/Installer/MarginContainer/VBoxContainer/GameLocation"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = ".../Subnautica/Subnautica.exe"

[node name="AutoFindButton" type="Button" parent="TabContainer/Installer/MarginContainer/VBoxContainer/GameLocation"]
layout_mode = 2
size_flags_stretch_ratio = 0.5
text = "自动寻找"

[node name="GameTipText" type="Label" parent="TabContainer/Installer/MarginContainer/VBoxContainer"]
modulate = Color(1, 1, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "  "
vertical_alignment = 1

[node name="ModPackLocation" type="HBoxContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TextPackLocation" type="Label" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ModPackLocation"]
layout_mode = 2
text = "百川安装包位置"

[node name="LineEditPackLocation" type="LineEdit" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ModPackLocation"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = ".../百川归海x.x.x安装包.zip"
emoji_menu_enabled = false

[node name="OpenZIPButton" type="Button" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ModPackLocation"]
layout_mode = 2
text = "解压并加载"

[node name="ModPackTipText" type="Label" parent="TabContainer/Installer/MarginContainer/VBoxContainer"]
modulate = Color(0, 1, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 24
clip_text = true

[node name="ConsolePanel" type="HBoxContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InstallInfo" type="VBoxContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="PanelTitle" type="Label" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/InstallInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "状态"
horizontal_alignment = 1

[node name="Info" type="RichTextLabel" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/InstallInfo"]
visible = false
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "游戏版本验证
[right][/right]
BepInEx存在迹象
[right][/right]
QMods存在迹象
[right][/right]
百川安装状况
[right][/right]"
scroll_active = false
autowrap_mode = 0

[node name="Refresh" type="Button" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/InstallInfo"]
visible = false
layout_mode = 2
text = "刷新"

[node name="GameNotFound" type="Label" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/InstallInfo"]
layout_mode = 2
size_flags_vertical = 6
text = "未指定游戏位置"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OperationSelect" type="VBoxContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelTitle" type="Label" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "操作"
horizontal_alignment = 1

[node name="OperationTabs" type="TabContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0
tab_focus_mode = 0

[node name="Install" type="VBoxContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ReinstallCheck" type="CheckBox" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Install" groups=["InstallOperatingNodes"]]
layout_mode = 2
text = "重新安装(用于版本更新、更换难度)"
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Install" groups=["InstallOperatingNodes"]]
layout_mode = 2
size_flags_vertical = 3

[node name="DifficultContainer" type="VBoxContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Install/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Difficults" type="Label" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Install/HBoxContainer/DifficultContainer"]
layout_mode = 2
text = "难度"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Install/HBoxContainer/DifficultContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DifficultsNodesContainer" type="VBoxContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Install/HBoxContainer/DifficultContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddonsContainer" type="VBoxContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Install/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="AddonPacks" type="Label" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Install/HBoxContainer/AddonsContainer"]
layout_mode = 2
text = "附属包"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Install/HBoxContainer/AddonsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AddonsNodesContainer" type="VBoxContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Install/HBoxContainer/AddonsContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ConfirmInstall" type="Button" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Install" groups=["InstallOperatingNodes"]]
layout_mode = 2
disabled = true
text = "请先设置游戏位置以确定安装位置"

[node name="ModPackNotFound" type="Label" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Install"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "未加载安装包"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Uninstall" type="VBoxContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="CheckBox" type="CheckBox" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Uninstall"]
layout_mode = 2
text = "保留BepInEx和QMods前置"

[node name="ConfirmUninstall" type="Button" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Uninstall"]
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "卸载
不可用"

[node name="FileVerify" type="VBoxContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="BlockTipText" type="Label" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/FileVerify"]
visible = false
layout_mode = 2
size_flags_vertical = 3
text = "未加载安装包"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartVerify" type="Button" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/FileVerify"]
layout_mode = 2
size_flags_vertical = 3
disabled = true
text = "校验整合包完整性
(仅适用于已安装当前选定安装包的情形)

此功能还没做"

[node name="Log" type="VBoxContainer" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="PanelTitle" type="Label" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/Log"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "日志"
horizontal_alignment = 1

[node name="LogText" type="RichTextLabel" parent="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/Log"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
theme_override_font_sizes/bold_italics_font_size = 20
theme_override_font_sizes/italics_font_size = 20
theme_override_font_sizes/mono_font_size = 20
theme_override_font_sizes/normal_font_size = 20
theme_override_font_sizes/bold_font_size = 20
theme_override_styles/focus = SubResource("StyleBoxFlat_tekc0")
theme_override_styles/normal = SubResource("StyleBoxFlat_tekc0")
bbcode_enabled = true
scroll_following = true
autowrap_mode = 1
selection_enabled = true
drag_and_drop_selection_enabled = false

[connection signal="pressed" from="TabContainer/Welcome/ContinueButton" to="." method="welcome_continue"]
[connection signal="pressed" from="TabContainer/EULA/AgreeButtonBar/RejectButton" to="." method="eula_reject"]
[connection signal="pressed" from="TabContainer/EULA/AgreeButtonBar/AgreeButton" to="." method="eula_agree"]
[connection signal="focus_exited" from="TabContainer/Installer/MarginContainer/VBoxContainer/GameLocation/LineEditGameLocation" to="." method="installer_gamepath_lose_focus"]
[connection signal="text_submitted" from="TabContainer/Installer/MarginContainer/VBoxContainer/GameLocation/LineEditGameLocation" to="." method="installer_gamepath_submit"]
[connection signal="pressed" from="TabContainer/Installer/MarginContainer/VBoxContainer/GameLocation/AutoFindButton" to="." method="installer_auto_find_game"]
[connection signal="focus_exited" from="TabContainer/Installer/MarginContainer/VBoxContainer/ModPackLocation/LineEditPackLocation" to="." method="installer_packpath_lose_focus"]
[connection signal="text_submitted" from="TabContainer/Installer/MarginContainer/VBoxContainer/ModPackLocation/LineEditPackLocation" to="." method="installer_packpath_submit"]
[connection signal="pressed" from="TabContainer/Installer/MarginContainer/VBoxContainer/ModPackLocation/OpenZIPButton" to="." method="installer_unpack_and_load_install_pack"]
[connection signal="pressed" from="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/InstallInfo/Refresh" to="." method="installer_state_refresh"]
[connection signal="pressed" from="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Install/ReinstallCheck" to="." method="installer_install_reinstall_checkbox"]
[connection signal="pressed" from="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Install/ConfirmInstall" to="." method="installer_install_confirm"]
[connection signal="pressed" from="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/Uninstall/ConfirmUninstall" to="." method="installer_uninstall_confirm"]
[connection signal="pressed" from="TabContainer/Installer/MarginContainer/VBoxContainer/ConsolePanel/OperationSelect/OperationTabs/FileVerify/StartVerify" to="." method="installer_verify_start"]
